# wd-ai-agent-orchestration

./: .env_minimal  .env_template  .gitignore  ARCHITECTURE.md  CHEATSHEET.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
00-introduction/: README.md  smoke_test.py
01-hello-agent/: README.md
01-hello-agent/agent_framework/: hello_agent.py
01-hello-agent/flock/: hello_agent.py
02-multi-agent/: README.md
02-multi-agent/agent_framework/: pipeline.py
02-multi-agent/flock/: pipeline.py
03-parallel-execution/: README.md
03-parallel-execution/agent_framework/: parallel.py
03-parallel-execution/flock/: parallel.py
04-conditional-routing/: README.md
04-conditional-routing/agent_framework/: conditional.py
04-conditional-routing/flock/: conditional.py
05-tools-and-functions/: README.md
05-tools-and-functions/agent_framework/: tools.py
05-tools-and-functions/flock/: tools.py
06-architecture-deep-dive/: README.md
07-advanced-patterns/: README.md
07-advanced-patterns/agent_framework/: fan_out_join.py  loop.py
07-advanced-patterns/flock/: fan_out_join.py  feedback_loop.py
08-when-to-use-which/: README.md
