[project]
name = "wd-ai-agent-orchestration"
version = "0.1.0"
description = "Workshop: AI Agent Orchestration — Flock vs Microsoft Agent Framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "flock-core>=0.5.36",
    "agent-framework-core",
    "python-dotenv>=1.0.0",
]

[tool.uv]
prerelease = "allow"
